Updated the colab by cloning the github and getting data from git rather than /content(i.e uploading it)

--- a/Credit_Score_Prediction.ipynb
+++ b/Credit_Score_Prediction.ipynb
@@ -11,6 +11,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/Pranav-Reddy-Pedaballe/Credit-Card-Behaviour-Score-Prediction.git\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5XYTIXl16_vV",
+        "outputId": "7d5ca304-cb36-4ef5-f869-b09f9b7c93d1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Credit-Card-Behaviour-Score-Prediction'...\n",
+            "remote: Enumerating objects: 20, done.\u001b[K\n",
+            "remote: Counting objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Total 20 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (20/20), 5.57 MiB | 12.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (4/4), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd Credit-Card-Behaviour-Score-Prediction\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cKZryTT77CHM",
+        "outputId": "814b2d30-27fb-49ef-a3ca-c609b70123bd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/Credit-Card-Behaviour-Score-Prediction\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "GJkt-WekPeUf"
@@ -21,11 +73,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "ohzVBqeB3_54"
       },
       "outputs": [],
@@ -38,11 +87,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "FjTmJ8V_H-db"
       },
       "outputs": [],
@@ -63,40 +109,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "MRc_ZNjC4tTG"
       },
       "outputs": [],
       "source": [
-        "df=pd.read_csv(\"/content/train_dataset_final1.csv\")"
+        "df = pd.read_csv(\"data/train_dataset_final1.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
-          "background_save": true,
           "base_uri": "https://localhost:8080/",
           "height": 443
         },
         "id": "cO_7azyS4z4a",
-        "outputId": "fc01f39a-1345-4d56-8de2-779b9d69a412"
+        "outputId": "de37474b-63ae-490f-b677-4f9775bbcac7"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "df"
-            },
+            "text/plain": [
+              "       Customer_ID  marriage  sex  education  LIMIT_BAL   age  pay_0  pay_2  \\\n",
+              "0             5017         2    0          2      60000  25.0      2      2   \n",
+              "1             5018         2    1          1     290000  24.0      0      0   \n",
+              "2             5019         1    0          2     180000  63.0      0      0   \n",
+              "3             5020         1    1          2     210000  43.0      0      0   \n",
+              "4             5021         2    0          1     280000  32.0     -2     -2   \n",
+              "...            ...       ...  ...        ...        ...   ...    ...    ...   \n",
+              "25242        30259         1    1          2      90000  33.0      0      0   \n",
+              "25243        30260         1    0          2      60000  49.0      0      0   \n",
+              "25244        30261         2    0          1     120000  31.0     -1     -1   \n",
+              "25245        30262         1    1          4     390000  40.0      0      0   \n",
+              "25246        30263         1    1          2     160000  58.0     -1     -1   \n",
+              "\n",
+              "       pay_3  pay_4  ...  Bill_amt6  pay_amt1  pay_amt2  pay_amt3  pay_amt4  \\\n",
+              "0          2      0  ...   20750.63   2000.21      0.00   1134.85   1821.78   \n",
+              "1         -2     -2  ...    1350.30      0.00      0.17      0.00   2700.10   \n",
+              "2          0      0  ...   52991.51   2086.94   2199.99   1845.66   2000.35   \n",
+              "3          0      0  ...   76945.47   3348.07   3380.91   3400.45   2683.97   \n",
+              "4         -2     -2  ...       1.35    999.78   3186.27  45027.78   2100.09   \n",
+              "...      ...    ...  ...        ...       ...       ...       ...       ...   \n",
+              "25242      0      0  ...   90042.87   2800.18   3999.97   8000.09   5347.85   \n",
+              "25243      0      0  ...   19204.07  22000.17   2187.56   2501.13   2512.09   \n",
+              "25244     -1     -1  ...    9834.64   1315.83   1315.60    533.08   4116.08   \n",
+              "25245      0      0  ...  199013.32   7636.03   5652.86   5544.67   5532.37   \n",
+              "25246     -1     -1  ...    1443.08   1442.81   1443.06   1442.97   1443.31   \n",
+              "\n",
+              "       pay_amt5  pay_amt6  AVG_Bill_amt  PAY_TO_BILL_ratio  next_month_default  \n",
+              "0       1500.03   1500.24      41511.50               0.03                   0  \n",
+              "1          0.00   1349.72       2534.50               0.27                   0  \n",
+              "2       1923.00   1999.78      50422.00               0.04                   0  \n",
+              "3       2744.00   2892.10      86229.50               0.04                   0  \n",
+              "4          0.01      0.27      11814.33               0.72                   0  \n",
+              "...         ...       ...           ...                ...                 ...  \n",
+              "25242   3699.98   3128.06      82312.50               0.05                   0  \n",
+              "25243   4004.89   2604.22      41371.67               0.14                   1  \n",
+              "25244   9834.10   7100.12       3071.83               1.31                   1  \n",
+              "25245   5859.09   6818.14     197278.83               0.03                   0  \n",
+              "25246   1442.72   1443.00       1443.00               1.00                   0  \n",
+              "\n",
+              "[25247 rows x 27 columns]"
+            ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9a972102-60d2-45d8-8e0c-0f83527f627c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dafdad3a-6f88-42d7-9e15-c11c98278379\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -410,7 +491,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9a972102-60d2-45d8-8e0c-0f83527f627c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dafdad3a-6f88-42d7-9e15-c11c98278379')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -462,12 +543,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9a972102-60d2-45d8-8e0c-0f83527f627c button.colab-df-convert');\n",
+              "        document.querySelector('#df-dafdad3a-6f88-42d7-9e15-c11c98278379 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9a972102-60d2-45d8-8e0c-0f83527f627c');\n",
+              "        const element = document.querySelector('#df-dafdad3a-6f88-42d7-9e15-c11c98278379');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -487,8 +568,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-ed7c4a4a-0171-4fe4-9128-3862183a7900\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ed7c4a4a-0171-4fe4-9128-3862183a7900')\"\n",
+              "    <div id=\"df-3be31d17-5205-42ca-a785-571239a44064\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3be31d17-5205-42ca-a785-571239a44064')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -607,14 +688,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-ed7c4a4a-0171-4fe4-9128-3862183a7900 button');\n",
+              "            document.querySelector('#df-3be31d17-5205-42ca-a785-571239a44064 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_45d48e2b-5952-47e2-b7e6-3dc7d0c1cdc2\">\n",
+              "  <div id=\"id_5bc80b29-fc6b-4230-a6d5-74bdf4ccf3ff\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -658,7 +739,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_45d48e2b-5952-47e2-b7e6-3dc7d0c1cdc2 button.colab-df-generate');\n",
+              "        document.querySelector('#id_5bc80b29-fc6b-4230-a6d5-74bdf4ccf3ff button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -672,52 +753,13 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "text/plain": [
-              "       Customer_ID  marriage  sex  education  LIMIT_BAL   age  pay_0  pay_2  \\\n",
-              "0             5017         2    0          2      60000  25.0      2      2   \n",
-              "1             5018         2    1          1     290000  24.0      0      0   \n",
-              "2             5019         1    0          2     180000  63.0      0      0   \n",
-              "3             5020         1    1          2     210000  43.0      0      0   \n",
-              "4             5021         2    0          1     280000  32.0     -2     -2   \n",
-              "...            ...       ...  ...        ...        ...   ...    ...    ...   \n",
-              "25242        30259         1    1          2      90000  33.0      0      0   \n",
-              "25243        30260         1    0          2      60000  49.0      0      0   \n",
-              "25244        30261         2    0          1     120000  31.0     -1     -1   \n",
-              "25245        30262         1    1          4     390000  40.0      0      0   \n",
-              "25246        30263         1    1          2     160000  58.0     -1     -1   \n",
-              "\n",
-              "       pay_3  pay_4  ...  Bill_amt6  pay_amt1  pay_amt2  pay_amt3  pay_amt4  \\\n",
-              "0          2      0  ...   20750.63   2000.21      0.00   1134.85   1821.78   \n",
-              "1         -2     -2  ...    1350.30      0.00      0.17      0.00   2700.10   \n",
-              "2          0      0  ...   52991.51   2086.94   2199.99   1845.66   2000.35   \n",
-              "3          0      0  ...   76945.47   3348.07   3380.91   3400.45   2683.97   \n",
-              "4         -2     -2  ...       1.35    999.78   3186.27  45027.78   2100.09   \n",
-              "...      ...    ...  ...        ...       ...       ...       ...       ...   \n",
-              "25242      0      0  ...   90042.87   2800.18   3999.97   8000.09   5347.85   \n",
-              "25243      0      0  ...   19204.07  22000.17   2187.56   2501.13   2512.09   \n",
-              "25244     -1     -1  ...    9834.64   1315.83   1315.60    533.08   4116.08   \n",
-              "25245      0      0  ...  199013.32   7636.03   5652.86   5544.67   5532.37   \n",
-              "25246     -1     -1  ...    1443.08   1442.81   1443.06   1442.97   1443.31   \n",
-              "\n",
-              "       pay_amt5  pay_amt6  AVG_Bill_amt  PAY_TO_BILL_ratio  next_month_default  \n",
-              "0       1500.03   1500.24      41511.50               0.03                   0  \n",
-              "1          0.00   1349.72       2534.50               0.27                   0  \n",
-              "2       1923.00   1999.78      50422.00               0.04                   0  \n",
-              "3       2744.00   2892.10      86229.50               0.04                   0  \n",
-              "4          0.01      0.27      11814.33               0.72                   0  \n",
-              "...         ...       ...           ...                ...                 ...  \n",
-              "25242   3699.98   3128.06      82312.50               0.05                   0  \n",
-              "25243   4004.89   2604.22      41371.67               0.14                   1  \n",
-              "25244   9834.10   7100.12       3071.83               1.31                   1  \n",
-              "25245   5859.09   6818.14     197278.83               0.03                   0  \n",
-              "25246   1442.72   1443.00       1443.00               1.00                   0  \n",
-              "\n",
-              "[25247 rows x 27 columns]"
-            ]
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "df"
+            }
           },
-          "execution_count": 139,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -8317,7 +8359,6 @@
         "zucRaBIhEbW5"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyPU4ARH14jgyZOLGKxU9N7k",
       "include_colab_link": true
     },
     "kernelspec": {
